--- a/result/2022-07-28.md
+++ b/result/2022-07-28.md
@@ -4,7 +4,7 @@
 4. [王姈妈妈](https://s.weibo.com//weibo?q=%E7%8E%8B%E5%A7%88%E5%A6%88%E5%A6%88&Refer=top) 1048340
 5. [南京玄奘寺事件令佛门蒙羞](https://s.weibo.com//weibo?q=%23%E5%8D%97%E4%BA%AC%E7%8E%84%E5%A5%98%E5%AF%BA%E4%BA%8B%E4%BB%B6%E4%BB%A4%E4%BD%9B%E9%97%A8%E8%92%99%E7%BE%9E%23&Refer=top) 916823
 6. [姐妹俩疑为分割父亲遗产挥锤砸门](https://s.weibo.com//weibo?q=%23%E5%A7%90%E5%A6%B9%E4%BF%A9%E7%96%91%E4%B8%BA%E5%88%86%E5%89%B2%E7%88%B6%E4%BA%B2%E9%81%97%E4%BA%A7%E6%8C%A5%E9%94%A4%E7%A0%B8%E9%97%A8%23&Refer=top) 742111
-7. [四川枪击案搜捕民兵发声](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E6%9E%AA%E5%87%BB%E6%A1%88%E6%90%9C%E6%8D%95%E6%B0%91%E5%85%B5%E5%8F%91%E5%A3%B0%23&Refer=top) 717325
+7. [四川枪击案搜捕民兵发声](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E6%9E%AA%E5%87%BB%E6%A1%88%E6%90%9C%E6%8D%95%E6%B0%91%E5%85%B5%E5%8F%91%E5%A3%B0%23&Refer=top) 721169
 8. [周劼如何入职江西国控](https://s.weibo.com//weibo?q=%23%E5%91%A8%E5%8A%BC%E5%A6%82%E4%BD%95%E5%85%A5%E8%81%8C%E6%B1%9F%E8%A5%BF%E5%9B%BD%E6%8E%A7%23&Refer=top) 688292
 9. [目黑莲确诊新冠](https://s.weibo.com//weibo?q=%23%E7%9B%AE%E9%BB%91%E8%8E%B2%E7%A1%AE%E8%AF%8A%E6%96%B0%E5%86%A0%23&Refer=top) 662725
 10. [奶奶病危请假被HR要求证明是亲奶](https://s.weibo.com//weibo?q=%23%E5%A5%B6%E5%A5%B6%E7%97%85%E5%8D%B1%E8%AF%B7%E5%81%87%E8%A2%ABHR%E8%A6%81%E6%B1%82%E8%AF%81%E6%98%8E%E6%98%AF%E4%BA%B2%E5%A5%B6%23&Refer=top) 628658
@@ -14,15 +14,15 @@
 14. [男子怒甩键盘将儿子砸成重伤获刑](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E6%80%92%E7%94%A9%E9%94%AE%E7%9B%98%E5%B0%86%E5%84%BF%E5%AD%90%E7%A0%B8%E6%88%90%E9%87%8D%E4%BC%A4%E8%8E%B7%E5%88%91%23&Refer=top) 374241
 15. [二舅作者回应被指抄袭](https://s.weibo.com//weibo?q=%23%E4%BA%8C%E8%88%85%E4%BD%9C%E8%80%85%E5%9B%9E%E5%BA%94%E8%A2%AB%E6%8C%87%E6%8A%84%E8%A2%AD%23&Refer=top) 356361
 16. [古茗回应奶茶被曝喝出壁虎](https://s.weibo.com//weibo?q=%23%E5%8F%A4%E8%8C%97%E5%9B%9E%E5%BA%94%E5%A5%B6%E8%8C%B6%E8%A2%AB%E6%9B%9D%E5%96%9D%E5%87%BA%E5%A3%81%E8%99%8E%23&Refer=top) 325268
-17. [HarmonyOS](https://s.weibo.com//weibo?q=%23HarmonyOS%23&Refer=top) 306711
-18. [重庆男子一胎得女发文称晦气](https://s.weibo.com//weibo?q=%23%E9%87%8D%E5%BA%86%E7%94%B7%E5%AD%90%E4%B8%80%E8%83%8E%E5%BE%97%E5%A5%B3%E5%8F%91%E6%96%87%E7%A7%B0%E6%99%A6%E6%B0%94%23&Refer=top) 297491
-19. [江西省纪委介入调查周劼事件](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E8%A5%BF%E7%9C%81%E7%BA%AA%E5%A7%94%E4%BB%8B%E5%85%A5%E8%B0%83%E6%9F%A5%E5%91%A8%E5%8A%BC%E4%BA%8B%E4%BB%B6%23&Refer=top) 297041
-20. [河南广电谢谢你治好我选择困难症](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E5%B9%BF%E7%94%B5%E8%B0%A2%E8%B0%A2%E4%BD%A0%E6%B2%BB%E5%A5%BD%E6%88%91%E9%80%89%E6%8B%A9%E5%9B%B0%E9%9A%BE%E7%97%87%23&Refer=top) 295936
-21. [你能听出耳机音质好坏吗](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E8%83%BD%E5%90%AC%E5%87%BA%E8%80%B3%E6%9C%BA%E9%9F%B3%E8%B4%A8%E5%A5%BD%E5%9D%8F%E5%90%97%23&Refer=top) 259578
-22. [哈啰经理划破70辆美团单车被拘](https://s.weibo.com//weibo?q=%23%E5%93%88%E5%95%B0%E7%BB%8F%E7%90%86%E5%88%92%E7%A0%B470%E8%BE%86%E7%BE%8E%E5%9B%A2%E5%8D%95%E8%BD%A6%E8%A2%AB%E6%8B%98%23&Refer=top) 250420
-23. [成都18岁女孩跳楼被气垫接住](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD18%E5%B2%81%E5%A5%B3%E5%AD%A9%E8%B7%B3%E6%A5%BC%E8%A2%AB%E6%B0%94%E5%9E%AB%E6%8E%A5%E4%BD%8F%23&Refer=top) 250213
-24. [啊泽](https://s.weibo.com//weibo?q=%E5%95%8A%E6%B3%BD&Refer=top) 228913
-25. [北京一拉布拉多犬超高被没收](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E4%B8%80%E6%8B%89%E5%B8%83%E6%8B%89%E5%A4%9A%E7%8A%AC%E8%B6%85%E9%AB%98%E8%A2%AB%E6%B2%A1%E6%94%B6%23&Refer=top) 219938
+17. [北京一拉布拉多犬超高被没收](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E4%B8%80%E6%8B%89%E5%B8%83%E6%8B%89%E5%A4%9A%E7%8A%AC%E8%B6%85%E9%AB%98%E8%A2%AB%E6%B2%A1%E6%94%B6%23&Refer=top) 313241
+18. [HarmonyOS](https://s.weibo.com//weibo?q=%23HarmonyOS%23&Refer=top) 306711
+19. [重庆男子一胎得女发文称晦气](https://s.weibo.com//weibo?q=%23%E9%87%8D%E5%BA%86%E7%94%B7%E5%AD%90%E4%B8%80%E8%83%8E%E5%BE%97%E5%A5%B3%E5%8F%91%E6%96%87%E7%A7%B0%E6%99%A6%E6%B0%94%23&Refer=top) 297491
+20. [江西省纪委介入调查周劼事件](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E8%A5%BF%E7%9C%81%E7%BA%AA%E5%A7%94%E4%BB%8B%E5%85%A5%E8%B0%83%E6%9F%A5%E5%91%A8%E5%8A%BC%E4%BA%8B%E4%BB%B6%23&Refer=top) 297041
+21. [河南广电谢谢你治好我选择困难症](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E5%B9%BF%E7%94%B5%E8%B0%A2%E8%B0%A2%E4%BD%A0%E6%B2%BB%E5%A5%BD%E6%88%91%E9%80%89%E6%8B%A9%E5%9B%B0%E9%9A%BE%E7%97%87%23&Refer=top) 295936
+22. [你能听出耳机音质好坏吗](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E8%83%BD%E5%90%AC%E5%87%BA%E8%80%B3%E6%9C%BA%E9%9F%B3%E8%B4%A8%E5%A5%BD%E5%9D%8F%E5%90%97%23&Refer=top) 259578
+23. [哈啰经理划破70辆美团单车被拘](https://s.weibo.com//weibo?q=%23%E5%93%88%E5%95%B0%E7%BB%8F%E7%90%86%E5%88%92%E7%A0%B470%E8%BE%86%E7%BE%8E%E5%9B%A2%E5%8D%95%E8%BD%A6%E8%A2%AB%E6%8B%98%23&Refer=top) 250420
+24. [成都18岁女孩跳楼被气垫接住](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD18%E5%B2%81%E5%A5%B3%E5%AD%A9%E8%B7%B3%E6%A5%BC%E8%A2%AB%E6%B0%94%E5%9E%AB%E6%8E%A5%E4%BD%8F%23&Refer=top) 250213
+25. [啊泽](https://s.weibo.com//weibo?q=%E5%95%8A%E6%B3%BD&Refer=top) 228913
 26. [果农将葡萄喂猪被质疑浪费](https://s.weibo.com//weibo?q=%23%E6%9E%9C%E5%86%9C%E5%B0%86%E8%91%A1%E8%90%84%E5%96%82%E7%8C%AA%E8%A2%AB%E8%B4%A8%E7%96%91%E6%B5%AA%E8%B4%B9%23&Refer=top) 190435
 27. [谁也管不住沈腾的嘴](https://s.weibo.com//weibo?q=%23%E8%B0%81%E4%B9%9F%E7%AE%A1%E4%B8%8D%E4%BD%8F%E6%B2%88%E8%85%BE%E7%9A%84%E5%98%B4%23&Refer=top) 188907
 28. [上海一医院8000元招募疫苗接种志愿者](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E4%B8%80%E5%8C%BB%E9%99%A28000%E5%85%83%E6%8B%9B%E5%8B%9F%E7%96%AB%E8%8B%97%E6%8E%A5%E7%A7%8D%E5%BF%97%E6%84%BF%E8%80%85%23&Refer=top) 187698
@@ -44,3 +44,4 @@
 44. [日本多地政府收到威胁邮件](https://s.weibo.com//weibo?q=%23%E6%97%A5%E6%9C%AC%E5%A4%9A%E5%9C%B0%E6%94%BF%E5%BA%9C%E6%94%B6%E5%88%B0%E5%A8%81%E8%83%81%E9%82%AE%E4%BB%B6%23&Refer=top) 100037
 45. [古茗被曝喝出壁虎](https://s.weibo.com//weibo?q=%23%E5%8F%A4%E8%8C%97%E8%A2%AB%E6%9B%9D%E5%96%9D%E5%87%BA%E5%A3%81%E8%99%8E%23&Refer=top) 76028
 46. [婉拒还不奏效怎么办](https://s.weibo.com//weibo?q=%23%E5%A9%89%E6%8B%92%E8%BF%98%E4%B8%8D%E5%A5%8F%E6%95%88%E6%80%8E%E4%B9%88%E5%8A%9E%23&Refer=top) 67254
+47. [心疼颜淡](https://s.weibo.com//weibo?q=%23%E5%BF%83%E7%96%BC%E9%A2%9C%E6%B7%A1%23&Refer=top) 38996
